POM: update developers and contributors
* Add missing contributors.
* Use imagej.net URL for all developers.
* Remove the superfluous (and prone to obsolescence) other info.

--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,7 @@
 		<developer>
 			<id>hinerm</id>
 			<name>Mark Hiner</name>
-			<email>hiner@wisc.edu</email>
-			<url>http://loci.wisc.edu/people/mark-hiner</url>
-			<organization>UW-Madison LOCI</organization>
-			<organizationUrl>http://loci.wisc.edu/</organizationUrl>
+			<url>http://imagej.net/User:Hinerm</url>
 			<roles>
 				<role>lead</role>
 				<role>developer</role>
@@ -32,15 +29,11 @@
 				<role>support</role>
 				<role>maintainer</role>
 			</roles>
-			<timezone>-6</timezone>
 		</developer>
 		<developer>
 			<id>ctrueden</id>
 			<name>Curtis Rueden</name>
-			<email>ctrueden@wisc.edu</email>
-			<url>http://loci.wisc.edu/people/curtis-rueden</url>
-			<organization>UW-Madison LOCI</organization>
-			<organizationUrl>http://loci.wisc.edu/</organizationUrl>
+			<url>http://imagej.net/User:Rueden</url>
 			<roles>
 				<role>founder</role>
 				<role>lead</role>
@@ -50,17 +43,23 @@
 				<role>support</role>
 				<role>maintainer</role>
 			</roles>
-			<timezone>-6</timezone>
 		</developer>
 	</developers>
 	<contributors>
 		<contributor>
 			<name>Brian Northan</name>
+			<url>http://imagej.net/User:Bnorthan</url>
 			<properties><id>bnorthan</id></properties>
 		</contributor>
 		<contributor>
 			<name>Ellen Arena</name>
+			<url>http://imagej.net/User:Etarena</url>
 			<properties><id>etarena</id></properties>
+		</contributor>
+		<contributor>
+			<name>Stephan Helfrich</name>
+			<url>http://imagej.net/User:Stelfrich</url>
+			<properties><id>stelfrich</id></properties>
 		</contributor>
 	</contributors>
 
