POM: fix Stefan Helfrich's name

--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
 			<properties><id>etarena</id></properties>
 		</contributor>
 		<contributor>
-			<name>Stephan Helfrich</name>
+			<name>Stefan Helfrich</name>
 			<url>http://imagej.net/User:Stelfrich</url>
 			<properties><id>stelfrich</id></properties>
 		</contributor>
