Add a test framework for scripts + tests for ImageJ2 scripts

--- a/pom.xml
+++ b/pom.xml
@@ -178,6 +178,18 @@
             <artifactId>junit-benchmarks</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.scif</groupId>
+            <artifactId>scifio</artifactId>
+            <scope>test</scope>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>net.imagej</groupId>
+            <artifactId>imagej</artifactId>
+            <scope>test</scope>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
