Replace imagej dependency by imagej-ops and imagej-common
* Replaced all `ij.op()` calls in scripts by `ops` (OpService)
* Replaced all `ij.dataset()` calls in scripts by `ds` (DatasetService)

--- a/pom.xml
+++ b/pom.xml
@@ -186,7 +186,13 @@
         </dependency>
         <dependency>
             <groupId>net.imagej</groupId>
-            <artifactId>imagej</artifactId>
+            <artifactId>imagej-common</artifactId>
+            <scope>test</scope>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>net.imagej</groupId>
+            <artifactId>imagej-ops</artifactId>
             <scope>test</scope>
             <type>jar</type>
         </dependency>
