--- a/pom.xml
+++ b/pom.xml
@@ -112,8 +112,8 @@
 		<url>https://github.com/imagej/imagej-scripting/issues</url>
 	</issueManagement>
 	<ciManagement>
-		<system>Jenkins</system>
-		<url>http://jenkins.imagej.net/job/ImageJ-Scripting/</url>
+		<system>Travis CI</system>
+		<url>https://travis-ci.org/imagej/imagej-scripting</url>
 	</ciManagement>
 
 	<properties>
