--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: java
 jdk: oraclejdk8
 branches:
   only: master
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
 install: true
 script: ".travis/build.sh"
 after_success: ".travis/notify.sh Travis-Success"
