--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.scijava</groupId>
         <artifactId>pom-scijava</artifactId>
-        <version>12.0.0</version>
+        <version>14.0.0</version>
         <relativePath />
     </parent>
 
@@ -132,6 +132,7 @@
         <license.copyrightOwners>Board of Regents of the University of
             Wisconsin-Madison.</license.copyrightOwners>
         <license.projectName>ImageJ software for multidimensional image processing and analysis.</license.projectName>
+        <scripting-jython.version>0.4.1</scripting-jython.version>
     </properties>
 
     <repositories>
