--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,9 @@
 		<license.copyrightOwners>Board of Regents of the University of
 			Wisconsin-Madison.</license.copyrightOwners>
 		<license.projectName>ImageJ software for multidimensional image processing and analysis.</license.projectName>
+
+		<!-- NB: Deploy releases to the ImageJ Maven repository. -->
+		<releaseProfiles>deploy-to-imagej</releaseProfiles>
 	</properties>
 
 	<repositories>
