--- a/pom.xml
+++ b/pom.xml
@@ -112,8 +112,8 @@
 		<url>https://github.com/imagej/imagej-scripting/issues</url>
 	</issueManagement>
 	<ciManagement>
-		<system>Travis CI</system>
-		<url>https://travis-ci.org/imagej/imagej-scripting</url>
+		<system>GitHub Actions</system>
+		<url>https://github.com/imagej/imagej-scripting/actions</url>
 	</ciManagement>
 
 	<properties>
@@ -126,7 +126,7 @@
 		<license.excludes>**/script_templates/**</license.excludes>
 
 		<!-- NB: Deploy releases to the SciJava Maven repository. -->
-		<releaseProfiles>deploy-to-scijava</releaseProfiles>
+		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
 	</properties>
 
 	<repositories>
