--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 		<developer>
 			<id>bnorthan</id>
 			<name>Brian Northan</name>
-			<url>https://imagej.net/User:Bnorthan</url>
+			<url>https://imagej.net/people/bnorthan</url>
 			<roles>
 				<role>lead</role>
 				<role>developer</role>
@@ -44,7 +44,7 @@
 		<developer>
 			<id>hadim</id>
 			<name>Hadrien Mary</name>
-			<url>https://imagej.net/User:Hadim</url>
+			<url>https://imagej.net/people/hadim</url>
 			<roles>
 				<role>lead</role>
 				<role>developer</role>
@@ -57,7 +57,7 @@
 		<developer>
 			<id>ctrueden</id>
 			<name>Curtis Rueden</name>
-			<url>https://imagej.net/User:Rueden</url>
+			<url>https://imagej.net/people/ctrueden</url>
 			<roles>
 				<role>founder</role>
 				<role>debugger</role>
@@ -69,27 +69,27 @@
 	<contributors>
 		<contributor>
 			<name>Ellen Arena</name>
-			<url>https://imagej.net/User:Etarena</url>
-			<properties><id>etarena</id></properties>
+			<url>https://imagej.net/people/etadobson</url>
+			<properties><id>etadobson</id></properties>
 		</contributor>
 		<contributor>
 			<name>Jan Eglinger</name>
-			<url>https://imagej.net/User:Eglinger</url>
+			<url>https://imagej.net/people/imagejan</url>
 			<properties><id>imagejan</id></properties>
 		</contributor>
 		<contributor>
 			<name>Michael Entrup</name>
-			<url>https://imagej.net/User:M-entrup</url>
+			<url>https://imagej.net/people/m-entrup</url>
 			<properties><id>m-entrup</id></properties>
 		</contributor>
 		<contributor>
 			<name>Stefan Helfrich</name>
-			<url>https://imagej.net/User:Stelfrich</url>
+			<url>https://imagej.net/people/stelfrich</url>
 			<properties><id>stelfrich</id></properties>
 		</contributor>
 		<contributor>
 			<name>Mark Hiner</name>
-			<url>https://imagej.net/User:Hinerm</url>
+			<url>https://imagej.net/people/hinerm</url>
 			<properties><id>hinerm</id></properties>
 		</contributor>
 	</contributors>
